Fluxus : (C) 2008 Dave Griffiths : dave at pawfal dot org : www.pawfal.org

0.16

* internal depth sort on particles
* added (build-type) and (build-extruded-type)
* added Perlin noise and Simplex noise functions (noise), (snoise)
* lots of fixes to fluxa to make it stable
* (reparent)
* (get-global-transform)
* (bb-intersect)
* inline GLSL code
* F4 execute s expr
* added stippled lines, (hint-wire-stippled), (line-pattern)
* added (set-cursor)

0.15

* ported to PLT 3.99
* removed scheme versions of obj import/export
* midi support - gabor papp
* added fluxa - an audio synth
* added text opacity on F10 and F11
* fixed saveas dialog, cursor and shift works
* inlined most of dada.h (~5% speedup)
* renamed build-line to build-ribbon
* more meshes to play with (used in frisbee examples)
* shadows now work on immediate mode objects
* key release fixed in drflux
* multi views/cameras
* better random functions with randomness.ss
* frisbee: a functional reactive game engine using frtime
* added -lang (not how useful this is now)
* added -fs and -x for fullscreen and run script at startup
* fixed crashes to do with garbage collection using threads
* sped up pdata-get/ref
* made (backfacecull) local state rather than global
* added (hint-cull-ccw)
* documentation changed so we can have functions in different files sharing the same section
* ported html and text doc conversion to plt 4
* (line-intersect) for raytracing poly primitives
* pixel primitive changes
   - (pixels-width) and (pixels-height) for querying dimensions
   - added a load of commands for drawing into pixels primitives:
     (pixels-circle), (pixels-blend-circle), (pixels-dodge), (pixels-burn) and (pixels-clear) 
	 see docs for more info...
* added (fmod)
* more polygon querying
  - (poly-indices) gets the index list
  - (poly-type) returns the type of the polygon 'triangle-strip, 'triangle-list etc
  - (poly-indexed?) returns #t if the polygon is index mode