@@ -20,7 +20,8 @@
 
 using namespace Fluxus;
 	
-LocatorPrimitive::LocatorPrimitive() 
+LocatorPrimitive::LocatorPrimitive() :
+m_BoundingBoxRadius(0.5f)
 {
 }
 
@@ -49,8 +50,8 @@ void LocatorPrimitive::Render()
 ///\todo need some way of setting a locator's bounding volume
 dBoundingBox LocatorPrimitive::GetBoundingBox(const dMatrix &space)
 {	
-	return dBoundingBox(space.transform(dVector(-0.5,-0.5,-0.5)),
-						space.transform(dVector(0.5,0.5,0.5)));
+	return dBoundingBox(space.transform(dVector(-m_BoundingBoxRadius,-m_BoundingBoxRadius,-m_BoundingBoxRadius)),
+						space.transform(dVector(m_BoundingBoxRadius,m_BoundingBoxRadius,m_BoundingBoxRadius)));
 }
 
 void LocatorPrimitive::ApplyTransform(bool ScaleRotOnly)
